--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "Vue.volar",
     "vitest.explorer",
     "browserstackcom.nightwatch",
+    "ms-playwright.playwright",
     "dbaeumer.vscode-eslint",
     "EditorConfig.EditorConfig",
     "prettier.prettier-vscode"
