--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metamorfosis",
+  "name": "metamorfosis-front",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -8,22 +8,26 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "test:unit": "vitest",
-    "test:e2e": "nightwatch tests/e2e/*",
+    "test:e2e": "playwright test",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix --cache",
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
+    "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "pinia": "^3.0.4",
     "vue": "^3.5.26",
+    "vue-chartjs": "^5.3.3",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@nightwatch/vue": "^3.1.2",
+    "@playwright/test": "^1.57.0",
     "@tsconfig/node24": "^24.0.3",
     "@types/jsdom": "^27.0.0",
     "@types/node": "^24.10.4",
@@ -33,19 +37,18 @@
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
-    "chromedriver": "^143.0.3",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9.39.2",
+    "eslint-plugin-playwright": "^2.4.0",
     "eslint-plugin-vue": "~10.6.2",
-    "geckodriver": "^6.1.0",
     "jiti": "^2.6.1",
     "jsdom": "^27.3.0",
-    "nightwatch": "^3.14.0",
     "npm-run-all2": "^8.0.4",
+    "postcss": "^8.5.6",
     "prettier": "3.7.4",
-    "ts-node": "^10.9.2",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "vite": "^7.3.0",
-    "vite-plugin-nightwatch": "^0.4.6",
     "vite-plugin-vue-devtools": "^8.0.5",
     "vitest": "^4.0.16",
     "vue-tsc": "^3.2.1"
