--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "@vee-validate/rules": "^4.15.1",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "pinia": "^3.0.4",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.26",
     "vue-chartjs": "^5.3.3",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "vue-toastification": "^2.0.0-rc.5",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
