--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && node scripts/configure-htaccess.js",
     "preview": "vite preview",
     "test:unit": "vitest",
     "test:e2e": "playwright test",
@@ -18,9 +18,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.18",
-    "@vee-validate/rules": "^4.15.1",
-    "axios": "^1.13.2",
+    "axios": "^1.7.0",
     "chart.js": "^4.5.1",
     "pinia": "^3.0.4",
     "vee-validate": "^4.15.1",
@@ -31,7 +29,7 @@
     "yup": "^1.7.1"
   },
   "devDependencies": {
-    "@playwright/test": "^1.57.0",
+    "@tailwindcss/vite": "^4.1.18",
     "@tsconfig/node24": "^24.0.3",
     "@types/jsdom": "^27.0.0",
     "@types/node": "^24.10.4",
@@ -48,13 +46,14 @@
     "jiti": "^2.6.1",
     "jsdom": "^27.3.0",
     "npm-run-all2": "^8.0.4",
-    "postcss": "^8.5.6",
-    "prettier": "3.7.4",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "vite": "^7.3.0",
     "vite-plugin-vue-devtools": "^8.0.5",
     "vitest": "^4.0.16",
-    "vue-tsc": "^3.2.1"
+    "vue-tsc": "^3.2.1",
+    "dotenv": "^17.2.3",
+    "ts-node": "^10.9.2"
   }
 }
