--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_BASE_PATH=/
-VITE_BACKEND_URL=http://metamorfosis-back.test
+VITE_BACKEND_URL=https://metamorfosis-back.test
 VITE_ACCOUNTS_APP_URL=http://accounts-app.test
 VITE_APP_NAME="Metamorfosis"
 VITE_APP_VERSION="1.0.0"
